--- a/src/components/textarea/textAreaStyles.module.scss
+++ b/src/components/textarea/textAreaStyles.module.scss
@@ -40,6 +40,7 @@
     font-family: "Nunito";
     font-weight: 400;
     font-size: 16px;
+    background-color: #fff;
     @media all and (min-width: 768px) {
       width: 291px;
     }
