--- a/src/components/form/formStyles.module.scss
+++ b/src/components/form/formStyles.module.scss
@@ -7,8 +7,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 500px;
   &__title {
     text-align: center;
+    margin-bottom: 50px;
     @include pFeatures;
   }
 
