--- a/src/components/info/infoStyles.module.scss
+++ b/src/components/info/infoStyles.module.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
 @mixin pFeatures {
   margin: 0;
-  font-family: "Nunito";
+  font-family: "Nunito" !important;
   font-weight: 400;
   font-size: 16px;
 }
