--- a/src/components/loader/loaderStyles.module.scss
+++ b/src/components/loader/loaderStyles.module.scss
@@ -7,12 +7,12 @@
     width: 350px;
     height: 500px;
   }
-  @media all and (min-width: 601px) and (max-width: 900px) {
-    width: 600px;
+  @media all and (min-width: 768px) {
+    width: 704px;
     height: 500px;
   }
-  @media all and (min-width: 901px) {
-    width: 900px;
+  @media all and (min-width: 1024px) {
+    width: 904px;
     height: 500px;
   }
 }
@@ -20,10 +20,10 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 100px;
-  width: 50px;
-  height: 50px;
-  @media all and (min-width: 600px) {
-    width: 100px;
-    height: 100px;
+  width: 50px !important;
+  height: 50px !important;
+  @media all and (min-width: 768px) {
+    width: 100px !important;
+    height: 100px !important;
   }
 }
