--- a/src/components/textarea/textAreaStyles.module.scss
+++ b/src/components/textarea/textAreaStyles.module.scss
@@ -46,6 +46,10 @@ $templateColor: #7e7e7e;
     font-size: 16px;
     border-radius: 0 4px 4px 0;
     background-color: $themeColor;
+    resize: none;
+    overflow: hidden;
+    outline: none;
+    border: 1px solid #d0cfcf;
     @media all and (min-width: 768px) {
       width: 297px;
     }
