added local fonts and webp images

--- a/src/components/form/formStyles.module.scss
+++ b/src/components/form/formStyles.module.scss
@@ -1,5 +1,5 @@
 @mixin pFeatures {
-  font-family: "Nunito";
+  font-family: "NunitoRegular";
   font-weight: 400;
   font-size: 40px;
 }
@@ -29,7 +29,7 @@
   }
 
   &__button {
-    font-family: "Nunito";
+    font-family: "NunitoRegular";
     font-weight: 400;
     font-size: 16px;
     width: 100px;
