--- a/src/components/header/headerStyles.module.scss
+++ b/src/components/header/headerStyles.module.scss
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
 @mixin pFeatures {
   margin: 0;
-  font-family: "Nunito";
+  font-family: "NunitoRegular";
   font-weight: 400;
   font-size: 14px;
 }
