--- a/src/components/inputs/inputsStyles.module.scss
+++ b/src/components/inputs/inputsStyles.module.scss
@@ -1,5 +1,5 @@
 @mixin textFeatures {
-  font-family: "Nunito" !important;
+  font-family: "NunitoRegular" !important;
   font-weight: 400;
   font-size: 12px;
 }
