--- a/src/components/textarea/textAreaStyles.module.scss
+++ b/src/components/textarea/textAreaStyles.module.scss
@@ -1,5 +1,5 @@
 @mixin textFeatures {
-  font-family: "Nunito";
+  font-family: "NunitoRegular";
   font-weight: 400;
   font-size: 16px;
 }
@@ -41,9 +41,7 @@ $templateColor: #7e7e7e;
     box-sizing: border-box;
     padding: 15px 0 15px 16px;
     line-height: 24px;
-    font-family: "Nunito";
-    font-weight: 400;
-    font-size: 16px;
+    @include textFeatures;
     border-radius: 0 4px 4px 0;
     background-color: $themeColor;
     resize: none;
