--- a/src/components/tooltip/tooltipStyles.module.scss
+++ b/src/components/tooltip/tooltipStyles.module.scss
@@ -7,7 +7,7 @@
   &__hiddenText,
   &__title,
   &__visibleText {
-    font-family: "Nunito";
+    font-family: "NunitoRegular";
     font-weight: 400;
     font-size: 16px;
     line-height: 26px;
@@ -30,7 +30,6 @@
     text-align: center;
     border-radius: 6px;
     padding: 0 15px;
-    // word-break: break-all;
     word-wrap: break-word;
     position: absolute;
     top: 150%;
